--- a/first1.html
+++ b/first1.html
@@ -65,49 +65,49 @@
 
     <center>
       <object
-        data="/c++/UNIT 1-OOPs.pdf"
+        data="UNIT 1-OOPs.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file1"
       ></object>
       <object
-        data="/c++/UNIT  2- OOPs.pdf"
+        data="UNIT  2- OOPs.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file2"
       ></object>
       <object
-        data="/c++/Unit 1 -OOPs notes 3.pdf"
+        data="Unit 1 -OOPs notes 3.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file3"
       ></object>
       <object
-        data="/c++/unit 2 oop with c++ notes 4.pdf"
+        data="unit 2 oop with c++ notes 4.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file4"
       ></object>
       <object
-        data="/c++/_minorExam.pdf"
+        data="_minorExam.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file5"
       ></object>
       <object
-        data="/c++/c++ book.pdf"
+        data="c++ book.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file6"
       ></object>
       <object
-        data="/c++/complete notes book.pdf"
+        data="complete notes book.pdf"
         type="Application/pdf"
         width="0"
         height="0"
