--- a/second1.html
+++ b/second1.html
@@ -65,42 +65,42 @@
 
     <center>
       <object
-        data="/dbms/Unit-1 MCA-112 dbms notes.pdf"
+        data="Unit-1 MCA-112 dbms notes.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file1"
       ></object>
       <object
-        data="/dbms/Unit-2 MCA-112 dbms notes.pdf"
+        data="Unit-2 MCA-112 dbms notes.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file2"
       ></object>
       <object
-        data="/dbms/DATABASE MANAGEMENT SYSTEMS.pdf"
+        data="DATABASE MANAGEMENT SYSTEMS.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file3"
       ></object>
       <object
-        data="/dbms/DBMS.pdf"
+        data="DBMS.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file4"
       ></object>
       <object
-        data="/dbms/DBMS_20231104.pdf"
+        data="DBMS_20231104.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file5"
       ></object>
       <object
-        data="/dbms/DCAP204_MANAGING_DATABASE_DCAP402_DATABASE_MANAGEMENT_SYSTEMS.pdf"
+        data="DCAP204_MANAGING_DATABASE_DCAP402_DATABASE_MANAGEMENT_SYSTEMS.pdf"
         type="Application/pdf"
         width="0"
         height="0"
