--- a/third1.html
+++ b/third1.html
@@ -65,21 +65,21 @@
 
     <center>
       <object
-        data="/coa/COA.pdf"
+        data="COA.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file1"
       ></object>
       <object
-        data="/coa/COA... unit 1,2.pdf"
+        data="COA... unit 1,2.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file2"
       ></object>
       <object
-        data="/coa/COA Unit I&II_MCA notes.pdf"
+        data="COA Unit I&II_MCA notes.pdf"
         type="Application/pdf"
         width="0"
         height="0"
