--- a/fourth1.html
+++ b/fourth1.html
@@ -65,35 +65,35 @@
 
     <center>
       <object
-        data="/se/MCA UNIT 1 SE notes.pdf"
+        data="MCA UNIT 1 SE notes.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file1"
       ></object>
       <object
-        data="/se/unit 2 SE MCA notes.pdf"
+        data="unit 2 SE MCA notes.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file2"
       ></object>
       <object
-        data="/se/SE handwritten.pdf"
+        data="SE handwritten.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file3"
       ></object>
       <object
-        data="/se/SOFTWARE ENGINEERING minor exam paper.pdf"
+        data="SOFTWARE ENGINEERING minor exam paper.pdf"
         type="Application/pdf"
         width="0"
         height="0"
         class="file4"
       ></object>
       <object
-        data="/se/Software-Engineering-9th-Edition-by-Ian-Sommerville.pdf"
+        data="Software-Engineering-9th-Edition-by-Ian-Sommerville.pdf"
         width="0"
         height="0"
         class="file5"
